removing root var inside service card module

--- a/src/styles/_base/_base.scss
+++ b/src/styles/_base/_base.scss
@@ -1,5 +1,22 @@
-// Global base class based stylings
+:root {
+  --card-padding: 40px; // Spacing
+  --sticky-base: 12vh; // Base values for sticky positioning
+  // Calculated values for card reveal
+  --card-row-desktop: calc(
+    var(--font-size-h2-desktop) + (var(--card-padding) * 2)
+  );
+  --card-row-mobile: calc(var(--font-size-h2) + (var(--card-padding) * 2));
+  // Card reveal increments - how much of previous card to show
+  --reveal-increment-desktop: var(--card-row-desktop);
+  --reveal-increment-mobile: var(--card-row-mobile);
 
+  // Card spacing (distance between cards in normal scroll)
+  --card-spacing-base-desktop: 10rem; //18
+  --card-spacing-base-mobile: 13rem; //12
+  --card-spacing-decrement: 8rem; // 8 How much to reduce spacing for each subsequent card
+}
+
+// Global base class based stylings
 .descriptionWrapper {
   grid-column: 1/13;
   grid-row: 2 !important;
