--- a/src/app/components/title/Title.module.scss
+++ b/src/app/components/title/Title.module.scss
@@ -10,7 +10,13 @@
   }
 
   &_leftAligned {
+    color: var(--text-heading);
     text-align: left;
+    @include mix.heading-1-desktop;
+
+    @include mix.below(450px) {
+      @include mix.heading-1;
+    }
   }
 
   &_rightAligned {
