--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -24,6 +24,7 @@ body {
 }
 
 body {
+  opacity: 0;
   font-family: var(--font-body), Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
