--- a/src/app/components/about/About.module.scss
+++ b/src/app/components/about/About.module.scss
@@ -2,10 +2,11 @@
 
 .about_image {
   & :global(.tag) {
-    grid-column: 8/9;
+    grid-column: 7/8;
   }
   & :global(.description) {
-    grid-column: 9/-1;
+    grid-column: 8/-1;
+    width: 95%;
   }
 }
 
