--- a/src/app/components/mailTo/MailTo.module.scss
+++ b/src/app/components/mailTo/MailTo.module.scss
@@ -15,6 +15,8 @@
   transition: all 0.3s ease-out;
   overflow: hidden;
   z-index: 1;
+  cursor: pointer;
+  color: var(--text-heading);
 
   &::after {
     content: "";
