--- a/src/app/components/navItem/NavItem.module.scss
+++ b/src/app/components/navItem/NavItem.module.scss
@@ -1,9 +1,15 @@
+@use "../../../styles/_abstracts/" as mix;
+
 .navItem {
   position: relative;
   display: block;
   padding: var(--spacing-sm) var(--spacing-sm);
   overflow: hidden;
   cursor: pointer;
+  transform-origin: bottom;
+  transition: all 0.4s ease-out;
+  min-height: 40px;
+  color: var(--text-heading);
 
   @media (max-width: 750px) {
     padding: var(--spacing-sm) 0px;
@@ -17,28 +23,32 @@
     width: 100%;
     height: 1px;
     background-color: var(--border-primary);
-    transform-origin: center left;
-    transform: scaleX(1);
+    transform-origin: left;
+  }
+
+  :global(.wrap_line) {
+    overflow: hidden;
   }
 
   &_label {
     position: relative;
     z-index: 2;
+    font-family: var(--font-body);
     font-size: var(--font-size-body-sm);
-    color: var(--text-heading);
-    transition: all 0.2s ease-out;
     font-weight: 600;
 
+    &.pixel {
+      text-transform: uppercase;
+      @include mix.label-md;
+    }
+
     &.hovered {
+      transition: all 0.1s ease-out;
       color: var(--text-on-action) !important;
     }
 
     @media (max-width: 750px) {
-      font-family: var(--font-label-sm);
-
-      &.hovered {
-        color: var(--text-body) !important;
-      }
+      padding: var(--spacing-sm) var(--spacing-sm);
     }
   }
 }
@@ -52,12 +62,6 @@
   width: 100%;
   height: 100%;
   background-color: var(--surface-action);
-
-  @media (max-width: 750px) {
-    & {
-      display: none;
-    }
-  }
 }
 
 // .list {
