--- a/src/app/components/projects/ProjectCard.module.scss
+++ b/src/app/components/projects/ProjectCard.module.scss
@@ -31,6 +31,11 @@
     flex-flow: column-reverse;
     margin-top: var(--spacing-md);
 
+    & h3 {
+      text-transform: uppercase;
+      color: var(--text-heading);
+    }
+
     & > div {
       display: flex;
       justify-content: space-between;
