--- a/src/styles/_layout/_layout.scss
+++ b/src/styles/_layout/_layout.scss
@@ -49,3 +49,13 @@
     // margin: 0 20px;
   }
 }
+
+.overlay {
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: #000000;
+}
