--- a/src/styles/tokens/semantics.css
+++ b/src/styles/tokens/semantics.css
@@ -15,6 +15,7 @@
 
   /* Page Color*/
   --surface-page: var(--neutral-50);
+  --surface-page-invert: var(--neutral-800);
 
   /* Border Color */
   --border-primary: var(--neutral-300);
