Hero Style Flex Fix

--- a/src/app/components/hero/Hero.module.scss
+++ b/src/app/components/hero/Hero.module.scss
@@ -23,7 +23,7 @@
   margin-bottom: 48px;
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
   border-radius: var(--border-radius-md);
 
   @media (max-width: 750px) {
