--- a/src/app/components/mailTo/MailTo.module.scss
+++ b/src/app/components/mailTo/MailTo.module.scss
@@ -60,7 +60,7 @@
   width: max-content;
   border-radius: var(--border-radius-md);
   color: var(--text-body);
-  background-color: var(--primary-100);
+  background-color: var(--surface-primary);
   z-index: 1;
   cursor: pointer;
   user-select: none;
