--- a/src/app/components/menu/Menu.module.scss
+++ b/src/app/components/menu/Menu.module.scss
@@ -27,7 +27,7 @@
 
     @media (max-width: 750px) {
       min-width: 100%;
-      padding: var(--spacing-md) 0px var(--spacing-md) 0px;
+      padding: var(--spacing-sm) 0px var(--spacing-sm) 0px;
     }
 
     p {
