--- a/src/app/components/hero/HeroNeue.module.scss
+++ b/src/app/components/hero/HeroNeue.module.scss
@@ -30,7 +30,7 @@
   height: 350px;
   grid-row: 1;
   grid-column: 1/5;
-  // background-color: var(--surface-action);
+  background-color: var(--primary-300);
   margin-bottom: 48px;
   display: flex;
   justify-content: center;
@@ -52,7 +52,7 @@
     position: absolute;
     top: 0;
     z-index: 0;
-    background-color: hsla(0, 0%, 50%, 0.3);
+    background-color: hsla(0, 0%, 50%, 0.2);
     filter: blur(40px);
   }
 
@@ -60,7 +60,6 @@
     width: auto;
     height: 100%;
     object-fit: cover;
-    filter: drop-shadow(16px 160px 100px #ffede0);
   }
 }
 
