--- a/src/app/components/projects/ProjectCard.module.scss
+++ b/src/app/components/projects/ProjectCard.module.scss
@@ -21,7 +21,6 @@
   &_imageContainer {
     position: relative;
     height: 70vh;
-    background-color: var(--surface-primary-2);
     border-radius: var(--border-radius-md);
     overflow: hidden;
 
@@ -109,6 +108,10 @@
         vertical-align: center;
         width: 16px;
         height: 16px;
+
+        & path {
+          stroke: var(--text-on-action);
+        }
       }
     }
 
