--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -27,4 +27,5 @@ body {
   font-family: var(--font-body), Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  // transition: background-color 1.4s ease, color 1.4s ease;
 }
