--- a/src/app/components/footer/Footer.module.scss
+++ b/src/app/components/footer/Footer.module.scss
@@ -40,6 +40,10 @@
 
   & .mailWrapper {
     grid-column: 8/-1;
+
+    @media (max-width: 750px) {
+      margin-top: var(--spacing-lg);
+    }
   }
 }
 
