--- a/src/app/components/pages/home/home.module.scss
+++ b/src/app/components/pages/home/home.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   z-index: 1;
   background-color: var(--surface-page);
+  // transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
 }
 
 .footer_spacer {
